drag and drop update

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
   
+      <!-- drag and drop -->
+      <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.min.js"></script> -->
+      <!-- CDNJS :: Sortable (https://cdnjs.com/) -->
+      <!-- <script src="//cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script> -->
+      <!-- CDNJS :: Vue.Draggable (https://cdnjs.com/) -->
+      <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.15.0/vuedraggable.min.js"></script> -->
   </head>
   <body>
     <div id="app">
